# show-scraper

./: AGENTS.md  OVERVIEW.md  SCRAPE.md  package-lock.json  package.json
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  show-scrape.sqlite  tauri.conf.json
src-tauri/src/: config.rs  db.rs  facebook.rs  lib.rs  llm.rs  main.rs  models.rs  musicbrainz.rs  scheduler.rs  utils.rs
src-tauri/src/scraping/: base.rs  fox_theater_ics.rs  knitting_factory_html.rs  mod.rs  pine_box_html.rs  revolution_html.rs  treefort_html.rs
src/app/: router.tsx
src/app/hooks/: usePendingBuckets.ts  useSettings.ts
src/app/routes/: Dashboard.tsx  History.tsx  PendingPosts.tsx  Settings.tsx  Venues.tsx
src/lib/: types.ts
